<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/schedule_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEEEE" >

    <LinearLayout
        android:id="@+id/schedule_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/view_border"
            android:orientation="vertical" >

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:padding="10dp"
                android:showWeekNumber="false" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <Button
                    android:id="@+id/prev_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="25dp"
                    android:onClick="onTouch"
                    android:text="@string/str_prev" />

                <Button
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="25dp"
                    android:onClick="onTouch"
                    android:text="@string/str_next" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/MapConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/view_border"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="25dp"
                android:text="@string/str_mychild"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/mapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/view_border"
                android:onClick="onSearch"
                android:padding="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_search" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/view_border"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/supllies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/str_arrange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/view_border"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/homework"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/str_assign" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>