<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CostLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEEEE"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0.3"
        android:background="@drawable/view_border"
        android:orientation="vertical"
        android:weightSum="1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_next" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imageButton1"
                android:text="@string/str_monthly" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/GraphView1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:paddingLeft="25dp"
            android:layout_weight="0.8"
            android:clickable="false"
            android:orientation="vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.3"
        android:background="@drawable/view_border"
        android:orientation="vertical"
        android:weightSum="1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.2"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_next" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/imageButton2"
                android:text="@string/str_costinfo" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/GraphView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:paddingLeft="0dp"
            android:layout_weight="0.8"
            android:clickable="false"
            android:orientation="vertical" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/MapConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/view_border"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:text="@string/str_moreinfo"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/costButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:onClick="onDetail"
            android:background="@drawable/view_border"
            android:padding="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_pencil" />
    </RelativeLayout>

</LinearLayout>